UX polishes and fixes; allow jumping to current playlist position

--- a/src/client/App/index.css
+++ b/src/client/App/index.css
@@ -3,18 +3,19 @@
   height: 100%;
   overflow: hidden;
   width: 100%;
-
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
 }
 
-.app-viewing-idle * {
+.app-immersed * {
   cursor: none !important;
 }
 
 .app .floating {
   box-shadow: 0 0 #0000, 0 0 #0000, 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+
+.app .shadowtext {
+  color: white;
+  text-shadow: 1px 1px 3px #222;
 }
 
 .app .acrylic {
